--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -10,6 +10,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
+    "noUnusedLocals" : false,
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
